--- a/styles/practice/Type.module.scss
+++ b/styles/practice/Type.module.scss
@@ -52,6 +52,7 @@
 @media only screen and (max-width:750px){
 	.mode_selection{
 		height: calc(100vh - 70px);
+		padding-top: 40px;
 		.nxt{
 			position: fixed;
 		}
