--- a/styles/practice/practice.module.scss
+++ b/styles/practice/practice.module.scss
@@ -46,6 +46,7 @@
 @media only screen and (max-width:750px){
 	.practice{
 		height: calc(100vh - 70px);
+		padding-top: 40px;
 		.nxt{
 			position: fixed;
 		}
