--- a/styles/practice/start.module.scss
+++ b/styles/practice/start.module.scss
@@ -93,6 +93,7 @@
 		}
 		.question {
 			width: 90vw;
+			min-height: fit-content;
 			height: fit-content;
 			h1 {
 				font-size: 28px;
